# mdl-sp1-poc

./: .gitignore  Cargo.toml  README.md
elf/: riscv32im-succinct-zkvm-elf
fixtures/: plonk-fixture.json
lib/: Cargo.toml
lib/src/: lib.rs
mdl/: Cargo.toml
mdl/src/: lib.rs  mdl_jwt.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml  build.rs
