[workspace]
members = [
    "lib",
    "program",
    "script",
]
resolver = "2"
exclude = ["mdl"]


[workspace.dependencies]
alloy-sol-types = "0.7.7"


[patch.crates-io]
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", branch = "patch-ecdsa-v0.16.9" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }